# skleroznik

Alpha_7/: .gitignore  Alpha_7.ino  README.txt
Alpha_7/BCdata_upload_module/: BCdata_restorator.cpp  BCdata_restorator.h  BCdata_upload_module.ino  BCdata_uploader.cpp  BCdata_uploader.h  README.txt  bullets.cfg  config_data_keeper.h  debug.txt  debug_print.txt  device_info.cpp  device_info.h  rifles.cfg  settings_keeper.cpp  settings_keeper.h
Alpha_7/BCdata_upload_module/data/: bullets.cfg  mildot.cfg  rifles.cfg  settings.cfg
Alpha_7/data/: bullets.cfg  rifles.cfg  target.cfg
Alpha_7/inc/: BC_input_window.h  BC_windows.h  BCdata_uploader.h  TFT_worker.h  about_window.h  bullet_db_window.h  bullet_window.h  energy_worker.h  input_utils.h  key_worker.h  keys_names.h  main_window.h  marker_director.h  meteo_module.h  rifle_db_window.h  rifle_window.h  settings_window.h  solver_structs_and_consts.h  trajectory_solver.h  trajectory_solver_API.h  trajectory_solver_routines.h  wifi_window.h  wind_director.h
Alpha_7/keypad/: key_worker.h  keypad.ino
Alpha_7/keypad/inc/: some.h
Alpha_7/keypad/src/: some.cpp
Alpha_7/meteo_module/: meteo_module.cpp  meteo_module.h  meteo_module.ino
Alpha_7/miscs/files/: inputs.cfg  rifles.cfg  target.cfg
Alpha_7/miscs/spiffs_uploader/: How_to.txt
Alpha_7/src/BCdata_upload_module/: BCdata_restorator.cpp  BCdata_uploader.cpp  device_info.cpp  settings_keeper.cpp
Alpha_7/windows/: BC_windows.cpp  TFT_worker.h  main_window.cpp  main_window.h  windows.ino
Ammo_extractor_CPP/: .gitignore  CMakeLists.txt
Ammo_extractor_CPP/inc/: error_codes.h
Ammo_extractor_CPP/src/: ammo_extractor_saver.cpp
Cheatsheets/: unix_commands.txt
Cpp_some_data/: templates.cpp  templates_variadic.cpp
FOR_MCU/Periferals_lib/: bme280.cpp
FOR_MCU/String/: test_String.cpp
IP_ADDRS_LISTING/: IP_list_RAII.cpp
Lessons/CHECKLIST/: checklist.txt
Lessons/GDB_and_profiling/: Makefile  Readme.txt  profiling_dynamic.cpp  profiling_static.cpp  sig_fault.cpp
Lessons/GTEST/: Gtest.txt  private_class_testing.cpp
Lessons/SQL_lessons/: SQL-read_me.txt  SQL-шпора.txt
Lessons/SYS_PROG/: README.ccc  cat.cpp  cd.cpp  chmod_x.cpp  date.cpp  echo.cpp  filetype.cpp  getenv.cpp  hostname.cpp  ls_la.cpp  mkdir.cpp  mv.cpp  pid_and_ppid.cpp  printenv.cpp  pwd.cpp  rm.cpp  rm_r.cpp  subprocess.cpp  time.cpp  touch.cpp  uname.cpp
Lessons/UNIX_Shell/: readme.txt
Lessons/cmake_lessons/: CMakeLists.txt  usefull_links.txt
Lessons/cmake_lessons/00_executable/: CMakeLists.txt
Lessons/cmake_lessons/00_executable/include/: hello.h
Lessons/cmake_lessons/00_executable/src/: hello.cpp
Lessons/cmake_lessons/01_static_lib/: CMakeLists.txt  readme.txt
Lessons/cmake_lessons/01_static_lib/include/: myCoolClass.h
Lessons/cmake_lessons/01_static_lib/src/: myCoolClass.cpp
Lessons/cmake_lessons/03_executable_with_linking/: CMakeLists.txt  main.cpp
MCDRAG/: MC_DRAG.c  make_script.sh
Multithreading/: 00_tasks_to_threads.cpp  01_thread_guard.cpp  02_scoped_thread.cpp  03_threadsafe_container.cpp  04_std_call_once.cpp  05_CV.cpp  06_threadsafe_container_via_CV.cpp  readme.txt
Multithreading/Simple_example/: .gitignore  CMakeLists.txt  client.cpp  server.cpp  zhelpers.h
Network/: HOWTO_INSTALL_OPENSSH.txt
Network/Chat_with_UNIX_sockets/: .gitignore  CMakeLists.txt
Network/Chat_with_UNIX_sockets/CUUIDGenerator/: .gitignore  CMakeLists.txt  CUUIDGenerator.cpp
Network/Chat_with_UNIX_sockets/client/: .gitignore  CMakeLists.txt  chatClient.cpp  clientMessage2Json.cpp  clientWorker.cpp
Network/Chat_with_UNIX_sockets/encryptDecrypt/Keygen/: .gitignore  CMakeLists.txt  keyGen.cpp
Network/Chat_with_UNIX_sockets/server/: .gitignore  CMakeLists.txt  chatServer.cpp  serverWorker.cpp
Network/LIBevent/: Makefile  main.cpp
Patterns/: README.txt  adapter.cpp  builder.cpp  chain.cpp  command.cpp  decorator.cpp  defer.cpp  fabrique_abstract.cpp  fabrique_method.cpp  facade.cpp  interface_realization.cpp  observer.cpp  singleton.cpp  strategy.cpp  template_method.cpp  typeinfo_RTTI.cpp  visitor.cpp
Patterns/Fichas/: defer.cpp  function_wrapper.cpp  template_RAII_wrapper.cpp
Patterns/fake_class_in_pure_C/: String.c  impls.c
Pet_projects/Ammo_extractor_CPP/: Amunition_extractor_var2.cpp
Pet_projects/FOR_MCU/String/: .gitignore  CMakeLists.txt
Pet_projects/FOR_MCU/String/Lib_string/: String.h
Pet_projects/MCDRAG/: MC_DRAG.c  serial_test.py
Pet_projects/Python_scripts/: ihi_ports_info.py  shmcheck
Pet_projects/ZMQ/ZMQ_S2/client/: CMakeLists.txt
Pet_projects/ZMQ/ZMQ_S2/server/: CMakeLists.txt  server.cpp
Pet_projects/ZMQ/ZMQ_S2/server/src/: json_to_s2.cpp  server_logger.cpp
Pet_projects/gamma_test/: .gitignore  CMakeLists.txt  README.txt  main.c
Pet_projects/gamma_test/include/: great_code.h
Pet_projects/gamma_test/libs/: CMakeLists.txt
Pet_projects/gamma_test/src/: great_code.c
Pet_projects/path_finding/maze_alg/: .gitignore  CMakeLists.txt
Pet_projects/path_finding/maze_alg/example/: CMakeLists.txt  main.cpp  map.py
Pet_projects/path_finding/maze_alg/include/: maze.h
Pet_projects/path_finding/maze_alg/src/: maze.cpp
Telemetry/: 1.html  README.txt
Telemetry/Chip_ID/: Chip_ID.ino
Telemetry/FATFS_test/: FATFS_test.ino
Telemetry/LITTLEFS_test/: LITTLEFS_test.ino
Telemetry/OLED_test/: OLED_test.ino
Telemetry/SPIFFS_test/: SPIFFS_test.ino
Telemetry/SimpleDemo/: SimpleDemo.ino
ZMQ/: .gitignore  publisher.cpp  suber.cpp
ZMQ/ZMQ_asinq_with_queue/: .gitignore  client.cpp  handshakes.h  server.cpp
ZMQ/client/: client.cpp  client.ini
common_stuff/: .gitignore  CCmdLineParser.h  CMakeLists.txt
common_stuff/fileworker/: CMakeLists.txt  CMiscUtil.cpp  CMiscUtil.h
common_stuff/ini_parser_test/: ini_file_parser.h  main.cpp  stat_serv.ini
common_stuff/inoty_wrapper/: .gitignore  CMakeLists.txt  inoty_wrapper.cpp  inoty_wrapper.h
common_stuff/logger/: CFastLog.cpp  CFastLog.h  CMakeLists.txt
common_stuff/program_timer/: program_timer.h
usfull_links/: C++ STL Algorithms Tutorial Series' Articles - DEV Community.desktop
(+63 files in other folders)
